wasm/genomic_count_bases_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_umo176q2/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/fb456b92620a7eb36af5a64832d9032d9f46ee82.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/fb456b92620a7eb36af5a64832d9032d9f46ee82.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/1b18592d67f77c72fae63fb8567295ba7fad34cd.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/1b18592d67f77c72fae63fb8567295ba7fad34cd.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/be2813c1fb5b5b6c44aec653c5d1d8b1f45578a0.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/be2813c1fb5b5b6c44aec653c5d1d8b1f45578a0.json" for subsequent builds)
cache:INFO:  - ok
